# home-library

./: README.md
service/: .env.example  .gitignore  README.md  deno.json  docker-compose.yaml  docker-compose_mongodb.yaml  pyproject.toml  server.test.ts  server.ts
service/app/: config.py  database.py  main.py  models.py
service/app/routes/: book.py  library.py
service/controllers/: bookController.ts
service/db/: db.ts  docker-compose.yaml  init.sql
service/models/: book.ts
service/routes/: book.router.ts
service/tests/: conftest.py  utils.py
service/tests/routes/: test_books.py  test_libraries.py
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: index.css  package.json
ui/src/components/Header/: Header.css  Header.test.tsx  Header.tsx
